# Kollaps

./: .gitignore  setup.py
kollaps/: Cargo.toml
kollaps/capnp-schemas/: Cargo.toml  build.rs
kollaps/common/ThunderStorm/: ThunderstormTranslator.py
kollaps/common/bootstrapping/: Bootstrapper.py
kollaps/communicationcore/: Cargo.toml
kollaps/communicationcore/src/: lib.rs
kollaps/communicationmanager/: Cargo.toml
kollaps/communicationmanager/src/: aux.rs  main.rs  select.rs
kollaps/controller/: Cargo.toml
kollaps/dashboard/: Dashboard.py
kollaps/ebpf-progs/: Cargo.toml
kollaps/ebpf-xtask/: Cargo.toml  README.md
kollaps/ebpf-xtask/src/: main.rs
kollaps/emulationcore/: Cargo.toml  build.rs
kollaps/emulationcore/src/: aux.rs  communication.rs  docker.rs  emulation.rs  emulationcore.rs  graph.rs  lib.rs  main.rs  xmlgraphparser.rs
kollaps/monitor/: Cargo.toml  build.rs
kollaps/monitor-common/: Cargo.toml
kollaps/monitor-common/src/: lib.rs
kollaps/monitor-ebpf/: Cargo.toml
kollaps/monitor-ebpf/src/: lib.rs  main.rs
kollaps/monitor/src/: error.rs  lib.rs
kollaps/tools/: NetGraph.py  XMLGraphParser.py  utils.py
kollaps/tools/ThunderStorm/: Generator.py  ThunderstormTranslator.py
kollaps/tools/bootstrapping/: Bootstrapper.py  KubernetesBootstrapper.py  SwarmBootstrapper.py
kollaps/tools/deploymentGenerators/: DockerComposeFileGenerator.py  KubernetesManifestGenerator.py  deploymentGenerator.py
