[package]
name = "communicationcore"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
os_pipe = "1.1.4"
capnp = "0.21"
capnp-schemas = { path = "../capnp-schemas" }
pyo3 = { version = "0.24.1", features = ["auto-initialize", "extension-module"] }

[lib]
name = "communicationcore"
crate-type = ["cdylib"]
