[package]
name = "communicationmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.7.0"
crossbeam-channel = "0.5.12"
shuffle = "0.1.7"
os_pipe = "1.1.4"
chrono = "0.4.31"
capnp-schemas = { path = "../capnp-schemas" }
capnp = "0.21.0"
rand = "0.9.1"
rand_pcg = "0.9.0"
libc = "0.2.172"
