[package]
name = "emulationcore"
version = "0.1.0"
edition = "2024"

[dependencies]
monitor = { path = "../monitor" }
capnp-schemas = { path = "../capnp-schemas" }
capnp = "0.21"
libc = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
roxmltree = "0.14.1"
random-string = "1.0"
regex = "1"
trust-dns-resolver = "*"
rand = "0.8.4"
rand_pcg = "0.3.1"
docker-api = "0.14"
subprocess = "0.2.8"
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
futures = "0.3.21"
elementtree = "0.7.0"
zero = "=0.1.2"
os_pipe = "1.1.4"
chrono = "0.4.31"
pnet = "0.35.0"
libloading = "0.8.6"
