[package]
name = "monitor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
monitor-common = { path = "../monitor-common" }

aya-ebpf = { version = "0.1.1", default-features = false }
memoffset = "0.9.1"
network-types = "0.0.8"

[build-dependencies]
which = { version = "6.0.0", default-features = false }

[[bin]]
name = "monitor"
path = "src/main.rs"
